# jit-expr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.xnor  Makefile  Makefile-pd  Makefile.pd  README.md  ast.h  configure  examples.txt  expr-help.pd  jit_expr-help.pd  main.cpp  parser.y  parser.yy  process.rb  scanner.ll  test.pd  tokens.l  xnor-expr-help.pd
src/: CMakeLists.txt  jit_expr-help.pd  jit_expr.cpp  jit_expr_version.h.in  main.cc  print.cc  print.h  xnor_expr.cpp
src/llvmcodegen/: codegen.cc  codegen.h
src/parse/: CMakeLists.txt  ast.cc  ast.h  driver.cc  driver.hh  parse.yy  scan.ll  scanner.hh
